# rust-blinky

./: Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg
src/: main.rs  serial.rs
