[package]
authors = ["Ivo Brandao <ivobrd@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-blinky"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.7"
nb = "0.1.1"
embedded-hal = "0.2.3"
panic-halt = "0.2"
stm32h7xx-hal = {version="0.1", features=["stm32h7x3"]}

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
